--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,5 @@ script:
   - docker tag simple-node YOUR_DOCKER_HUB/simple-node:latest
 
 after_success:
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - echo "$123Apoms$$" | docker login -u "$covenantson" --password-stdin
   - docker push covenantson/simple-node
